2010-12-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/RObject.h: New internal class SEXPstack to handle 
	garbage collection. Presumably more efficient than R_PreserveObject and
	R_ReleaseObject

2010-12-22  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/operators/plus.h: More efficient operator+ for 
	REALSXP sugar expressions, avoiding unnecessary NA tests.

2010-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Vector.R: Applied patch by Christian Gunning
	to add more tests for complex-typed vectors

2010-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (Rcpp.plugin.maker): Reverse order in PKG_LIBS

2010-12-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.9.0

        * debian/*: Similarly updated for new release to Debian

2010-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.9.0.txt: Started announcement post

	* inst/unitTests/runit.Date.R: Added new unit tests for date and
	datetime from string

2010-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Datetime.h: correct default format to use %OS for
	fractional seconds and not the popular typo %OS (i.e. ooh, not zero)

	* src/Datetime.cpp: add missing as.POSIXct() after strptime for
	constructor from string as we then use the constructor from double

	* src/Date.cpp: add missing as.Date() after strptime for constructor
	from string as we then use the constructor from int

2010-12-13  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/string_proxy.h: List::Proxy did not
	convert bool correctly, reported on Rcpp-devel by Daniel Sabanés
	Bové <daniel.sabanesbove@ifspm.uzh.ch>

2010-12-12  Romain Francois <romain@r-enthusiasts.com>

	* R/SHLIB.R: new unexported R function SHLIB, small wrapper around
	R CMD SHLIB

	* inst/include/Rcpp/sprintf.h: returning a std::string to avoid leaks

2010-12-10  Dirk Eddelbuettel  <edd@debian.org>
